--- a/week7_lab/style.css
+++ b/week7_lab/style.css
@@ -1,3 +1,12 @@
 h1 {
     text-align:center;
 }
+
+button {
+    background-color: springgreen;
+    border: 2px solid mediumspringgreen;
+    padding: 1px;
+    text-align: center;
+    display: inline-block;
+    font-size:16px;
+}
